fix: max height, prevent fullscreen overflow

--- a/src/components/chart/chart.scss
+++ b/src/components/chart/chart.scss
@@ -27,6 +27,10 @@ figure {
   @include mixins.visually-hidden;
 }
 
+.canvas-container {
+  max-height: calc(100vh - 136px);
+}
+
 canvas:focus,
 div:focus {
   border-radius: 4px;
